--- a/api-monitoring-files/package.json
+++ b/api-monitoring-files/package.json
@@ -10,16 +10,16 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "conventional-changelog-cli": "^1.3.4",
-    "coveralls": "^3.0.0",
+    "coveralls": "^3.0.4",
     "eslint-config-prettier": "^2.4.0",
     "eslint-config-xo": "^0.18.2",
     "eslint-plugin-prettier": "^2.2.0",
-    "http-server": "^0.9.0",
+    "http-server": "^0.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^4.2.1",
     "mocha": "^4.0.1",
-    "nsp": "^2.6.3",
-    "nyc": "^11.6.0",
+    "nsp": "^3.2.1",
+    "nyc": "^14.1.1",
     "prettier": "^1.7.0",
     "standard": "^10.0.3",
     "supertest": "^3.0.0",
@@ -27,8 +27,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "changelog":
-      "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
+    "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "commitmsg": "validate-commit-msg -p eslint",
     "lint": "eslint */**/*.js -f html -o ./test/reports/linter/index.html",
     "test": "nyc --reporter=lcov --temp-directory=coverage node test/index.js",
@@ -40,8 +39,14 @@
     "serve:linter": "http-server test/report/linter -o"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.json": ["prettier --write", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -57,5 +62,9 @@
     "url": "https://github.com/jenkins-workshop-kairosds/api-monitoring/issues"
   },
   "homepage": "https://github.com/jenkins-workshop-kairosds/api-monitoring#readme",
-  "keywords": ["api", "monitoring", "nodejs"]
+  "keywords": [
+    "api",
+    "monitoring",
+    "nodejs"
+  ]
 }
